Add dynamic header | Add table with product list

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -36,3 +36,12 @@ a {
 .sider button {
   margin-bottom: 2rem;
 }
+
+.header {
+  background-color: #f5f5f5;
+  text-align: center;
+}
+
+main {
+  padding: 2rem;
+}
